<<<<<<< HEAD
<resources>
    <string name="filename">pinlog</string>
    <string name="hint2">Input Name</string>
    <string name="hint">Input PIN</string>


    <string name="app_name">Locker Automation System</string>
    <string name="login1tv">Welcome back! Please input your PIN to continue</string>
    <string name="validate_pin">Validate PIN</string>
    <string name="login2tv">New user? Input a PIN to start and tap on the Register button to register a new device</string>
    <string name="validate_reg">Register</string>

    <string name="validate_err">Incorrect PIN, please try again</string>


    <string name="menuhead">Main Menu</string>
    <string name="displayb">To Display</string>
    <string name="lockb">To Lock Control</string>
    <string name="QRb">Scan QR Code</string>
    <string name="doorb">To Door Control</string>

    <string name="action_settings">Settings</string>

    <string name="lockOn">Lock is armed</string>
    <string name="lockOff">Lock is disarmed</string>

    <string name="txttit">←  (-)           (+)  →</string>
    <string name="dTxt">Open</string>
    <string name="dsTxt">0</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="pref_header">Settings</string>

    <string-array name="preferences">
        <item>Themes</item>
        <item>Account Settings</item>
    </string-array>

    <string name="pref_header2">About us</string>
    <string-array name="preferences2">
        <item>GitHub Repository</item>
    </string-array>

    <string name="pref_msgHead2">Choose your Theme</string>
    <string name="pref_msgApply">Apply</string>
    <string name="pref_msgCancel">Cancel</string>

    <string name="menu_menu">Menu</string>
    <string name="menu_qr">QR Scanner</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_door">Door</string>
    <string name="menu_display">Display</string>



    <string-array name="pref_colors">
        <item>Theme 1</item>
        <item>Theme 2</item>
        <item>Theme 3</item>
        <item>Theme 4</item>
    </string-array>
</resources>
=======
<resources>
    <string name="filename">pinlog</string>
    <string name="hint2">Input Name</string>
    <string name="hint">Input PIN</string>


    <string name="app_name">Locker Automation System</string>
    <string name="login1tv">Welcome back! Please input your PIN to continue</string>
    <string name="validate_pin">Validate PIN</string>
    <string name="login2tv">New user? Input a PIN to start and tap on the Register button to register a new device</string>
    <string name="validate_reg">Register</string>

    <string name="validate_err">Incorrect PIN, please try again</string>


    <string name="menuhead">Main Menu</string>
    <string name="displayb">To Display</string>
    <string name="lockb">To Lock Control</string>
    <string name="QRb">Scan QR Code</string>
    <string name="doorb">To Door Control</string>

    <string name="action_settings">Settings</string>

    <string name="lockOn">Lock is armed</string>
    <string name="lockOff">Lock is disarmed</string>

    <string name="txttit">←  (-)           (+)  →</string>
    <string name="dTxt">Open</string>
    <string name="dsTxt">0</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="pref_header">Settings</string>

    <string-array name="preferences">
        <item>Themes</item>
        <item>Account Settings</item>
    </string-array>

    <string name="pref_header2">About us</string>
    <string-array name="preferences2">
        <item>GitHub Repository</item>
    </string-array>

    <string name="pref_msgHead2">Choose your Theme</string>
    <string name="pref_msgApply">Apply</string>
    <string name="pref_msgCancel">Cancel</string>

    <string-array name="pref_colors">
        <item>Red</item>
        <item>Purple</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>
>>>>>>> e85493692c1994a6b92a212fedb5823ed428d526
