<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.goldenphoenicks.lockerauto.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/login1"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:text="@string/login1tv"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:layout_marginEnd="68dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="68dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/pinField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/valPin"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:elevation="24dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/validate_pin"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="96dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login1" />

    <TextView
        android:id="@+id/login2"
        android:layout_width="278dp"
        android:layout_height="42dp"
        android:text="@string/login2tv"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/valReg"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/valPin"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/valReg"
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:layout_marginTop="73dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/validate_reg"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valPin"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
